--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,5 @@
-SetEnv APPLICATION_ENV dev
-SetEnv APPLICATION_VERSION v0.8.9
+SetEnv APP_ENV "dev"
+SetEnv APP_VERSION "v0.0.1"
 
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -s [OR]
