--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     ],
     "require": {
         "php": ">=5.4",
-        "monolog/monolog": "1.11.*"
+        "monolog/monolog": ">=1.12",
+        "doctrine/orm": ">=2.4"
     },
     "autoload": {
         "psr-0": {"Fuska": "vendor/"},
